Tests run but with errors